--- a/user/i3/.config/i3/config
+++ b/user/i3/.config/i3/config
@@ -40,6 +40,7 @@ exec --no-startup-id ~/.config/xss-lock/lock.sh
 # for_window rules
 for_window [class="URxvt" title="^spotify$"] $move_scratchpad
 for_window [class="Signal"] $move_scratchpad
+for_window [class="whatsdesk"] $move_scratchpad
 for_window [class="Bitwarden"] $move_scratchpad
 for_window [class="feh"] floating enable
 
@@ -57,8 +58,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # start a terminal
-bindsym $mod+Return exec $TERMINAL
-bindsym $mod+Shift+Return exec $TERMINAL -e nnn
+bindsym $mod+Return exec $TERMINAL -e $SHELL -C n
+bindsym $mod+Shift+Return exec $TERMINAL
 
 # kill focused window
 bindsym $mod+q kill
