--- a/user/git/.config/git/config
+++ b/user/git/.config/git/config
@@ -3,7 +3,7 @@
 	email = brian-janssen@hotmail.com
 [core]
 	editor = nvim
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = diff-so-fancy | less --tabs=4 -FR
 [commit]
 	verbose = true
 [pull]
