--- a/user/i3wsr/.config/i3wsr/config.toml
+++ b/user/i3wsr/.config/i3wsr/config.toml
@@ -2,24 +2,26 @@
 # We use a thin space as seperator
 separator = "\u2009"
 default_icon = ""
+wm_property = "class"
 
 [options]
 remove_duplicates = true
-use_instance = true
-no_names = true
+no_icon_names = true
 
 [icons]
 # Quick access: https://www.nerdfonts.com/cheat-sheet
 discord = "\ufb6e"
+whatsdesk = "\ufaa2"
 firefox = "\ue745"
 chromium = "\ue743"
 urxvt = "\ue795"
-"pinentry-gtk-2" = "\uf74f"
+pinentry = "\uf74f"
 vscodium = "\ue70c"
-"microsoft teams - preview" = "\uf871"
-"org.pwmt.zathura" = "\uf725"
+teams = "\uf871"
+zathura = "\uf725"
 
 [aliases]
-"gimp-2.10" = "gimp"
-"microsoft teams - preview" = "teams"
-"pinentry-gtk-2" = "pinentry"
+"^gimp-" = "gimp"
+"^microsoft teams" = "teams"
+"^pinentry" = "pinentry"
+"zathura$" = "zathura"
