--- a/user/sway/.config/sway/hotkeys/00-default.conf
+++ b/user/sway/.config/sway/hotkeys/00-default.conf
@@ -8,7 +8,7 @@ floating_modifier $mod
 bindsym $mod+Shift+r reload
 
 # start a terminal
-bindsym $mod+Return exec $TERMINAL -e $SHELL -C n
+bindsym $mod+Return exec $TERMINAL $SHELL -C n
 bindsym $mod+Shift+Return exec $TERMINAL
 
 # kill focused window
