--- a/user/foot/.config/ruwal/templates/foot.ini
+++ b/user/foot/.config/ruwal/templates/foot.ini
@@ -3,24 +3,24 @@
 ###############################
 [colors]
 alpha={{ color.alpha / 100 }}
-# foreground=dcdccc
-# background=111111
-# regular0=222222  # black
-# regular1=cc9393  # red
-# regular2=7f9f7f  # green
-# regular3=d0bf8f  # yellow
-# regular4=6ca0a3  # blue
-# regular5=dc8cc3  # magenta
-# regular6=93e0e3  # cyan
-# regular7=dcdccc  # white
-# bright0=666666   # bright black
-# bright1=dca3a3   # bright red
-# bright2=bfebbf   # bright green
-# bright3=f0dfaf   # bright yellow
-# bright4=8cd0d3   # bright blue
-# bright5=fcace3   # bright magenta
-# bright6=b3ffff   # bright cyan
-# bright7=ffffff   # bright white
+foreground={{ color.foreground | color(format="rrggbb")}}
+background={{ color.background | color(format="rrggbb")}}
+regular0={{ color.0 | color(format="rrggbb")}} # black
+regular1={{ color.1 | color(format="rrggbb")}} # red
+regular2={{ color.2 | color(format="rrggbb")}} # green
+regular3={{ color.3 | color(format="rrggbb")}} # yellow
+regular4={{ color.4 | color(format="rrggbb")}} # blue
+regular5={{ color.5 | color(format="rrggbb")}} # magenta
+regular6={{ color.6 | color(format="rrggbb")}} # cyan
+regular7={{ color.7 | color(format="rrggbb")}} # white
+bright0={{ color.8 | color(format="rrggbb")}} # bright black
+bright1={{ color.9 | color(format="rrggbb")}} # bright red
+bright2={{ color.10 | color(format="rrggbb")}} # bright green
+bright3={{ color.11 | color(format="rrggbb")}} # bright yellow
+bright4={{ color.12 | color(format="rrggbb")}} # bright blue
+bright5={{ color.13 | color(format="rrggbb")}} # bright magenta
+bright6={{ color.14 | color(format="rrggbb")}} # bright cyan
+bright7={{ color.15 | color(format="rrggbb")}} # bright white
 
 #selection-foreground=<inverse foreground/background>
 #selection-background=<inverse foreground/background>
