Sway: Update to new theme

--- a/user/sway/.config/ruwal/templates/sway/style.conf
+++ b/user/sway/.config/ruwal/templates/sway/style.conf
@@ -7,7 +7,7 @@ set $wallpaper_bg #000000
 #set_from_resource $bgf i3wm.color8 #222222
 
 # Wallpaper
-output * background {{ wallpaper }} fill {{ color.background }}
+output * background {{ wallpaper }} fill {{ special.background }}
 
 # Font
 font pango:{{ font.regular }} 8
