Foot: Update to new theme

--- a/user/foot/.config/ruwal/templates/foot.ini
+++ b/user/foot/.config/ruwal/templates/foot.ini
@@ -2,9 +2,9 @@
 # Foot Colors
 ###############################
 [colors]
-alpha={{ color.alpha / 100 }}
-foreground={{ color.foreground | color(format="rrggbb")}}
-background={{ color.background | color(format="rrggbb")}}
+alpha={{ special.alpha / 100 }}
+foreground={{ special.foreground | color(format="rrggbb")}}
+background={{ special.background | color(format="rrggbb")}}
 regular0={{ color.0 | color(format="rrggbb")}} # black
 regular1={{ color.1 | color(format="rrggbb")}} # red
 regular2={{ color.2 | color(format="rrggbb")}} # green
