Sway: Update colors

--- a/user/sway/.config/ruwal/templates/sway/style.conf
+++ b/user/sway/.config/ruwal/templates/sway/style.conf
@@ -1,20 +1,12 @@
 
-# Set colors from Xresources
-set $wallpaper_bg #000000
-#set_from_resource $wallpaper_bg i3wm.background #ffffff
-#set_from_resource $fg i3wm.foreground #ffffff
-#set_from_resource $bg i3wm.color0 #000000
-#set_from_resource $bgf i3wm.color8 #222222
-
 # Wallpaper
-output * background {{ wallpaper }} fill {{ special.background }}
+output * background {{ wallpaper }} fill {{ special.background | color(format="hex") }}
 
 # Font
 font pango:{{ font.regular }} 8
 
 # borders and gaps
 default_border none
-#default_border pixel 8
 #gaps outer 8
 gaps outer 0
 gaps inner {{ border.size * 4 }}
@@ -31,10 +23,12 @@ border_images.unfocused		$border
 border_images.urgent		$border
 
 # Colors
+set $bg {{ color[border.color] | color(format="hex") }}
+set $fg {{ special.foreground | color(format="hex") }}
 # class                 border  backgr. text indicator child_border
-#client.focused          $bgf    $bgf    $fg  $bgf      $bgf
-#client.focused_inactive $bg     $bg     $fg  $bg       $bg
-#client.unfocused        $bg     $bg     $fg  $bg       $bg
-#client.urgent           $bg     $bg     $fg  $bg       $bg
-#client.placeholder      $bg     $bg     $fg  $bg       $bg
+client.focused          $bg     $bg     $fg  $bg       $bg
+client.focused_inactive $bg     $bg     $fg  $bg       $bg
+client.unfocused        $bg     $bg     $fg  $bg       $bg
+client.urgent           $bg     $bg     $fg  $bg       $bg
+client.placeholder      $bg     $bg     $fg  $bg       $bg
 
