Sway: Update gaps

--- a/user/sway/.config/ruwal/templates/sway/style.conf
+++ b/user/sway/.config/ruwal/templates/sway/style.conf
@@ -10,6 +10,7 @@ default_border none
 #gaps outer 8
 gaps outer 0
 gaps inner {{ border.size * 4 }}
+gaps top {{ border.size * -1 }}
 
 # outer + polybar = 8 + 24
 #gaps top 32 
